Actualizar estilos de CSS y agregar funcionalidad a VehiculoDAO

--- a/Presentacion/templates/loginRegister.html
+++ b/Presentacion/templates/loginRegister.html
@@ -75,7 +75,7 @@
 
     <div class="toggle-box">
       <div class="toggle-panel toggle-left">
-        <h1>¡Bienvenido!</h1>
+        <h1 style="color: #c9d1d9;">¡Bienvenido!</h1>
         <p>¿No tienes cuenta?</p>
         <button class="btn register-btn">Registrarse</button>
       </div>
