--- a/Presentacion/static/css/loginRegister.css
+++ b/Presentacion/static/css/loginRegister.css
@@ -54,6 +54,7 @@ html, body {
     top: 0;
     left: 0;
     width: 100%;
+    height: 8%;
     background-color: var(--bg-darker);
     padding: 1rem 2rem; /* Aumentado para centrar verticalmente */
     display: flex;
@@ -89,7 +90,6 @@ html, body {
     transition: background-color 0.3s ease; /* Removido transition de color */
     border-radius: 15px;
     position: relative;
-    top: 10px; /* Ajustado para centrar verticalmente */
 }
 
 .nav-links li a:hover {
