--- a/Presentacion/templates/vehicleList.html
+++ b/Presentacion/templates/vehicleList.html
@@ -17,8 +17,7 @@
     <nav class="navbar">
         <div class="nav-logo">GreenDrive</div>
         <ul class="nav-links">
-            <li><a href="/">Inicio</a></li>
-            <li><a href="/contacto">Contacto</a></li>
+            <li><a href="/">Cerrar Sesión</a></li>
         </ul>
     </nav>
 
@@ -39,10 +38,11 @@
                         <div class="expanded-details">
                             <h3>Reservar Vehículo</h3>
                             <form class="reservationForm" data-matricula="{{ vehiculo.matricula }}">
+                                <div class="form-group">Tipo: {{ vehiculo.tipo }}</div>
                                 <div class="form-group">Matricula: {{ vehiculo.matricula }}</div>
                                 <div class="form-group">Bateria: {{ vehiculo.bateria }}%</div>
-                                <div class="form-group">Coste: €</div>
-                                <!-- Puedes agregar más campos según sea necesario -->
+                                <div class="form-group">Coste: {{ vehiculo.precio }}€</div>
+                  
                                 <button type="submit" class="btn btn-primary">Reservar Vehículo</button>
                             </form>
                         </div>
