--- a/Presentacion/templates/vehicleListReserved.html
+++ b/Presentacion/templates/vehicleListReserved.html
@@ -19,22 +19,31 @@
     <section class="containerReserva container">
         {% if reserva %}
             <h1>Tu reserva activa</h1>
-            <h2>{{ vehicle.modelo }}</h2>
-            <p><strong>Matrícula:</strong> {{ vehicle.matricula }}</p>
-            <p><strong>Fecha inicio:</strong> {{ reserva.fecha_inicio.strftime('%Y-%m-%d') }}</p>
-            <p><strong>Fecha fin:</strong>
-                {% if reserva.fecha_fin %}
-                    {{ reserva.fecha_fin.strftime('%Y-%m-%d') }}
-                {% else %}
-                    –
-                {% endif %}
-            </p>
-            <p><strong>Estado:</strong> {{ reserva.estado }}</p>
-            <h2><strong>Tiempo transcurrido</strong></br>
-            <span id="elapsedTime" data-start="{{ reserva.fecha_inicio }}">00:00:00</span>
+            <div class="reservation-details">
+                <div class="image-col">
+                    <img src="{{ url_for('static', filename='images/vehicles/' + vehicle.tipo) + '.png' }}" alt="{{ vehicle.nombre }}">
+                </div>
+                <div class="text-col">
+                    <h2>{{ vehicle.modelo }}</h2>
+                    <p><strong>Matrícula:</strong> {{ vehicle.matricula }}</p>
+                    <p><strong>Fecha inicio:</strong> {{ reserva.fecha_inicio.strftime('%Y-%m-%d') }}</p>
+                    <p><strong>Fecha fin:</strong>
+                        {% if reserva.fecha_fin %}
+                            {{ reserva.fecha_fin.strftime('%Y-%m-%d') }}
+                        {% else %}
+                            –
+                        {% endif %}
+                    </p>
+                    <p><strong>Estado:</strong> {{ reserva.estado }}</p>
+                </div>
+            </div>
+            <h2 class="elapsed-container"><strong>Tiempo transcurrido</strong><br>
+                <span id="elapsedTime" data-start="{{ reserva.fecha_inicio }}">00:00:00</span>
             </h2>
-            <!-- ahora cargamos el script externo -->
-            <script src="{{ url_for('static', filename='js/reservationTimer.js') }}"></script>
+            <div class="button-wrapper">
+                <button id="finishReservation" class="finish-btn">Finalizar reserva</button>
+            </div>
+            
         {% else %}
             <p>No tienes reservas activas.</p>
         {% endif %}
@@ -44,5 +53,8 @@
     <footer class="footer">
         <p>© 2025 GreenDrive | <a href="#">Política de Privacidad</a> | <a href="#">Términos de Uso</a></p>
     </footer>
+
+    <!-- ahora cargamos el script externo -->
+    <script src="{{ url_for('static', filename='js/reservationTimer.js') }}"></script>
 </body>
 </html>
