--- a/Presentacion/templates/vehicleList.html
+++ b/Presentacion/templates/vehicleList.html
@@ -41,7 +41,9 @@
                             <form class="reservationForm" data-matricula="{{ vehiculo.matricula }}">
                                 <div class="form-group">Tipo: {{ vehiculo.tipo }}</div>
                                 <div class="form-group">Matricula: {{ vehiculo.matricula }}</div>
-                                <div class="form-group">Bateria: {{ vehiculo.bateria.nivel_pct }}%</div>
+                                <div class="form-group">
+                                  Batería: <span class="battery-level" data-matricula="{{ vehiculo.matricula }}">{{ vehiculo.bateria.nivel_pct }}%</span>
+                                </div>
                                 <div class="form-group">Coste: {{ vehiculo.precio }}Cents/min</div>
                   
                                 <button type="submit" class="btn btn-primary">Reservar Vehículo</button>
